Prevent border shifting content when opening shade
Previous the left and right border width was being changed on close and
open, causing the button location to shift.

Now the left and right borders are still there but invisible.

--- a/src/components/window-shade.sass
+++ b/src/components/window-shade.sass
@@ -28,12 +28,12 @@
 
 .windowShadeHidden
   height: 0
-  border-left: -3px
-  border-right: 0
   border-bottom: 0
   border-radius: 0
   margin-right: 3px;
   margin-bottom: 27px
+  border-left-color: transparent
+  border-right-color: transparent
   .content
     height: 0
     overflow: hidden
